--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+// External imports
+@import '~bootstrap/scss/bootstrap.scss';
+
+// Initial setup
 html, body {
   margin:0;
   padding:0;
@@ -7,3 +11,7 @@ html, body {
 #root {
   height: 100%;
 }
+
+
+// Components
+@import "./App";
