--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,17 @@ $footerHeight: 2rem;
 }
 
 .navbar.header {
+  padding: 0.1rem 1rem;
   border-bottom: 1px solid #d2d2d2;
+  
+  .navbar-brand {
+    font-size: 1.7rem;
+    font-weight: 200;
+    
+    img {
+      vertical-align: -3%;
+    }
+  }
 }
 
 .navbar.footer {
