--- a/src/BookSearch.scss
+++ b/src/BookSearch.scss
@@ -1,4 +1,8 @@
 .BookSearch {
+  .thumbnail {
+    width: 6rem;
+  }
+  
   .publication-year {
     font-size: 1rem;
     font-style: italic;
@@ -36,6 +40,10 @@
     .full-stars{
       color: #ECBE24;
     }
+  }
+  
+  .add-btn {
+    width: 11rem;
   }
   
 }
