Add 'My Books' page
* Create MyBooks component and show same card as search
* Break out Ratings component
* Clean up spacing/alignment around some text
* Save more data to API

--- a/src/MyBooks.scss
+++ b/src/MyBooks.scss
@@ -1,8 +1,8 @@
-.BookSearch {
+.MyBooks {
   .thumbnail {
     width: 6rem;
   }
-  
+
   .publication-year {
     font-size: 1rem;
     font-style: italic;
@@ -15,9 +15,4 @@
     color: gray;
     font-size: .8rem;
   }
-  
-  .add-btn {
-    width: 11rem;
-  }
-  
 }
