--- a/src/App.scss
+++ b/src/App.scss
@@ -8,15 +8,35 @@ $footerHeight: 2rem;
 .navbar.header {
   padding: 0.1rem 1rem;
   border-bottom: 1px solid #d2d2d2;
+  align-items: baseline;
   
   .navbar-brand {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     font-weight: 200;
+
+    @include media-breakpoint-down(sm) {
+      font-size: 1.4rem;
+      margin-right: 0;
+    }
     
     img {
       vertical-align: -3%;
     }
   }
+  
+  .nav-link {
+    padding: 0;
+    margin: 0 0.5rem;
+    
+    &.active {
+      border-bottom: 2px solid $gray-500;
+    }
+  }
+  
+  .user-actions {
+    align-self: center;
+  }
+  
 }
 
 .navbar.footer {
@@ -25,7 +45,19 @@ $footerHeight: 2rem;
   width:100%;
   height: $footerHeight;
   border-top: 1px solid #d2d2d2;
-  font-size: .5rem;
+  font-size: .6rem;
+  padding: 0.25rem 0.5rem;
+  
+  .attribution {
+    img {
+      vertical-align: middle;
+    }
+  }
+  
+  .source-link {
+    position: absolute;
+    right: 10px;
+  }
 }
 
 #mainContent {
